For changes in a particular version where the version number is unknown, the
version's author is given instead.  For the full (known) list of authors along
with their complete changes, see the AUTHORS file.

-------------------------------------------------------------------------------

* Changes in Cdecl 15.1

** C99 with extension error messages
Improved C99 with extension error messages.

** `GCC_COLORS`
Support for `GCC_COLORS` has been removed. It was more of a hindrance than a
help.

** Implicit `int` pointers in C++
Implicit `int` pointer declarations, e.g., `*p`, are now correctly illegal in
C++.

** `--infer-command`, `-I`
The former `--explain` and `-e` options have been renamed `--infer-command` and
`-I`; the former `explain-by-default` `set` option has been renamed `infer-
command`.

** Lambdas in C
Lambdas are not correctly illegal in C.

** Nested `typedef`s
Fixed printing of `typedef`s of nested types, e.g.:

    c++decl> struct S { typedef int I; }
    c++decl> typedef typename S::I T
    c++decl> show
    typedef S::I T;

** `restrict` arrays
Arrays being `restrict` except as function parameter is now correctly illegal.

** Types in error & warning messages
For types that are `typedef`s, now printing `aka` followed by their underlying
types in more cases.

** Fixed escaped newlines
Fixed escaped newline handling when not using GNU readline.

** Fixed `q` command
Fixed having `q` be a synonym for `quit` in `infer-command` (formerly `explain-
by-default`) mode.


* Changes in Cdecl 15.0

** Coalesced `explain` output
Output from `explain` coalesces same-base-type declarations together, e.g.:

    cdecl> explain int x, *p, y
    declare x, y as integer
    declare p as pointer to integer

** Command help
The `help` command now accepts a **cdecl** command name and prints help for
only that command.

** Optional `unique_id` in dump output
By default, dumped AST JSON5 no longer includes `unique_id` values.  (This is