@@ -295,7 +295,7 @@ to read
 .BI \-\-debug \f1[\fP "=" s \f1]\fP " \f1|\fP " \-d\f1[\fP s \f1]\fP
 Turns on
 .B cdecl
-debugging output (if compiled in):
+debugging output:
 .RS 4
 .IP \(bu 3
 Prints additional JSON5 output of an abstract syntax tree
@@ -1595,7 +1595,6 @@ debugging output
 Turns on
 .B cdecl
 debugging output
-(if compiled in)
 \(em default is off.
 (See the
 .B \-\-debug
