@@ -244,9 +244,7 @@ c_ast_t* c_ast_dup( c_ast_t const *ast, c_ast_list_t *node_list ) {
     c_ast_new( ast->kind, ast->depth, &ast->loc, node_list );
 
   dup_ast->align = ast->align;
-#ifdef ENABLE_CDECL_DEBUG
   dup_ast->dup_from_id = ast->unique_id;
-#endif /* ENABLE_CDECL_DEBUG */
   dup_ast->sname = c_sname_dup( &ast->sname );
   dup_ast->type = ast->type;
 
@@ -520,10 +518,8 @@ c_ast_t* c_ast_new( c_ast_kind_t kind, unsigned depth, c_loc_t const *loc,
   ast->loc = *loc;
   ast->type = T_NONE;
 
-#ifdef ENABLE_CDECL_DEBUG
   static c_ast_id_t next_id;
   ast->unique_id = ++next_id;
-#endif /* ENABLE_CDECL_DEBUG */
 
 #ifndef NDEBUG
   ++c_ast_count;
